[emacs] Configure whitespace-mode.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -47,6 +47,7 @@ buffer read only.
      ("C-c f b" . ediff-current-file))
     :config
     (declare-function ediff-setup-windows-plain "ediff-wind")
+
     (setq ediff-window-setup-function #'ediff-setup-windows-plain)
     (setq ediff-split-window-function #'split-window-horizontally))
 #+END_SRC
@@ -79,6 +80,23 @@ Save auto-save files in ~/.emacs.d/var/auto-save/.
     :init
     (add-hook 'prog-mode-hook #'flycheck-mode)
     :diminish flycheck-mode)
+#+END_SRC
+
+** whitespace - White space visualization
+#+BEGIN_SRC emacs-lisp
+  (use-package whitespace
+    :init
+    (add-hook 'prog-mode-hook #'whitespace-mode)
+    :config
+    (setq whitespace-style
+          '(space-mark tab-mark newline-mark
+            face spaces tabs newline trailing empty lines-tail))
+    (setq whitespace-display-mappings
+          '((space-mark ?\  [?·])
+            (space-mark ?\xA0 [?¤])
+            (tab-mark ?\t [?⇥ ?\t])
+            (newline-mark ?\n [?↵ ?\n])))
+    :diminish whitespace-mode)
 #+END_SRC
 
 * Windows
@@ -144,8 +162,66 @@ Load [[https://github.com/purcell/color-theme-sanityinc-tomorrow][Tomorrow]] the
 #+BEGIN_SRC emacs-lisp
   (use-package color-theme-sanityinc-tomorrow
     :ensure t
+    :preface
+    (declare-function color-rgb-to-hex "color")
+
+    ;; koek-thm/fg, koek-thm/bg, koek-thm/set-fg and koek-thm/set-bg are
+    ;; equivalent to face-foreground, face-background,
+    ;; set-face-foreground and set-face-background but return or take a
+    ;; list of RGB components instead of a string
+    (mapc
+     (pcase-lambda (`(,createf . ,pairs))
+       (mapc (pcase-lambda (`(,name ,f))
+               (fset name (funcall createf f)))
+             (seq-partition pairs 2)))
+     `((,(lambda (get-color)
+           (lambda (face &optional frame inherit)
+             (when-let (color (funcall get-color face frame inherit))
+               (color-name-to-rgb color))))
+        koek-thm/fg face-foreground
+        koek-thm/bg face-background)
+       (,(lambda (set-color)
+           (lambda (face color &optional frame)
+             (funcall set-color
+                      face (and color (apply #'color-rgb-to-hex color)) frame)))
+        koek-thm/set-fg set-face-foreground
+        koek-thm/set-bg set-face-background)))
+
+    (defun koek-thm/mix (color1 color2 &optional ratio)
+      "Mix COLOR1 with COLOR2.
+  COLOR1 and COLOR2 are lists of RGB components, see
+  `color-name-to-rgb'.  Optional RATIO is a float from zero to one
+  and defaults to one half.  Zero means mix zero units of COLOR1
+  with one unit of COLOR2, one means mix one unit of COLOR1 with
+  zero units of COLOR2."
+      (unless ratio
+        (setq ratio 0.5))
+      (let ((ratio´ (- 1 ratio)))
+        (seq-mapn (lambda (component component´)
+                    (+ (* component ratio) (* component´ ratio´)))
+                  color1 color2)))
     :config
-    (load-theme 'sanityinc-tomorrow-night 'no-confirm))
+    (declare-function map-elt "map")
+    (declare-function koek-thm/set-fg "50-general")
+    (declare-function koek-thm/set-bg "50-general")
+
+    (load-theme 'sanityinc-tomorrow-eighties 'no-confirm)
+    (map-let
+        (current-line selection)
+        (seq-reduce (pcase-lambda (colors `(,name . ,color))
+                      (puthash name (color-name-to-rgb color) colors)
+                      colors)
+                    (cdr (assoc 'eighties color-theme-sanityinc-tomorrow-colors))
+                    (make-hash-table))
+      (let ((alt-color (koek-thm/mix current-line selection)))
+        (dolist (face
+                 '(whitespace-space whitespace-hspace
+                   whitespace-tab whitespace-newline))
+          (koek-thm/set-fg face alt-color)
+          (koek-thm/set-bg face nil))
+        (dolist (face '(whitespace-trailing whitespace-empty whitespace-line))
+          (koek-thm/set-fg face nil)
+          (koek-thm/set-bg face selection)))))
 #+END_SRC
 
 Set default font to [[https://adobe-fonts.github.io/source-code-pro/][Source Code Pro]].
