--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -474,10 +474,10 @@ in mode line.
                   (eldoc-mode-line-string
                    nil)
                   (:eval
-                   (let* ((inhibit-mode-name-delight nil) ; Bound dynamically
+                   (let* ((inhibit-mode-name-delight nil) ; Looked up dynamically
                           (right (format-mode-line koek-ml/right)))
-                     `((;; FIXME: When mode-line-format is modified, pad
-                        ;; width is wrong. See ediff and eldoc.
+                     `((;; FIXME: When a package (e.g. ediff) wraps
+                        ;; mode-line-format, pad width is wrong
                         ,(max 0 (- (window-total-width) (string-width right)))
                         ("" koek-ml/left koek-ml/separator))
                        ;; Escape %'s
