--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -121,6 +121,12 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
   (bind-key "M-p" #'koek-mtn/previous-word)
 #+END_SRC
 
+** auto-fill-mode - Break long sentences
+#+BEGIN_SRC emacs-lisp
+  (add-hook 'text-mode-hook #'auto-fill-mode)
+  (delight 'auto-fill-function nil 'emacs)
+#+END_SRC
+
 ** smartparens - Manage pairs & expressions
 [[https://github.com/Fuco1/smartparens][smartparens (GitHub)]]
 
@@ -260,6 +266,16 @@ Bury buffers, don't kill them. Computers have more than enough memory.
   (use-package elisp-mode
     :mode ((rx ".el" string-end) . emacs-lisp-mode)
     :delight (emacs-lisp-mode "El" :major))
+#+END_SRC
+
+** Text
+#+BEGIN_SRC emacs-lisp
+  (use-package text-mode
+    :mode (rx (or ".txt" "/README" "/LICENSE") string-end)
+    :preface
+    ;; See https://github.com/jwiegley/use-package/issues/267
+    (provide 'text-mode)
+    :delight (text-mode "Txt" :major))
 #+END_SRC
 
 * Appearance
