[emacs] Tweak smartparens' keybindings.

--- a/.emacs.d/50-general.org
+++ b/.emacs.d/50-general.org
@@ -153,9 +153,9 @@ recognize [[*subword - Recognize words in camel case words][subwords]].
      ("C-M-a" . sp-beginning-of-sexp)
      ("C-M-e" . sp-end-of-sexp)
      ("C-M-d" . sp-down-sexp)
-     ("C-M-u" . sp-backward-up-sexp)
+     ("C-M-u" . sp-up-sexp)
      ("C-S-d" . sp-backward-down-sexp)
-     ("C-S-u" . sp-up-sexp)
+     ("C-S-u" . sp-backward-up-sexp)
      ("C-M-<right>" . sp-forward-slurp-sexp)
      ("C-M-<left>"  . sp-forward-barf-sexp)
      ("C-S-<left>"  . sp-backward-slurp-sexp)
